--- a/personal.html
+++ b/personal.html
@@ -27,8 +27,8 @@
 	<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.<p>
 		<img src = "images/wisconsin_dells.jpg" width="25" alt = "A picture in Wisconsin Dells"/>
 		<img src = "images/badlands.jpg" width="1000" alt = "A picture in the badlands"/>
-		<img src = "images/falling.jpg" width="25" alt = "A child falling off of a cliff"/>
-		<img src = "images/jewel_cave.jpg" width="1000" alt = "Picture of jewel cave" />
+		<img src = "images/falling.jpg" width="25" alt = "A child falling off a cliff"/>
+		<img src = "images/jewel_cave.jpg" width="1000" alt = "Picture of jewel cave"/>
 	</main>
 	Colleen van Lent &copy; 2020
 </body>
